Improved registry initialization. Updated configuration. Extended enums. Added yaml tags for objects and resources export.
